[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "notion-mcp"
version = "0.1.0"
description = "MCP server providing Notion API tools for Claude Code, Claude Desktop, and Claude Cowork"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.0.0",
]

[project.scripts]
notion-mcp = "notion_mcp.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/notion_mcp"]
